# speech

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  temp.vtt  test.json
files/32190402-8c18-4b4b-94b0-00c783b55f71/: subtitles.vtt
speech/: db.py  main.py  utils.py
